kubernetes/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: savyo-web-service
  namespace: prod
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: savyoweb
